* Add reporting with latest date and amount per journal

Version 7.4.0 - 2024-11-04
--------------------------
* Bug fixes (see mercurial logs for details)


Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Allow RPC on get_by_bank_account of statement journal
* Search statement journal by bank account and currency
* Support second currency on statement line

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Split line also when amount to pay of invoice is zero
* Allow line with amount of zero
* Remove support for Python 3.7
* Add support for Python 3.11

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)
* Require party on statement line if account requires one

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Use reference field for statement line relation
* Create default statement journal
* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Allow statement journals to be deactivated

Version 6.0.0 - 2021-05-03
--------------------------
* Bug fixes (see mercurial logs for details)
* Warn user when posting a statement with cancelled or paid invoices
* Fill move line's origin with statement line

Version 5.8.0 - 2020-11-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5
* Rename statement state from cancel to cancelled

Version 5.6.0 - 2020-05-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Prevent posting move from statement that is not posted

Version 5.4.0 - 2019-11-04
--------------------------
* Bug fixes (see mercurial logs for details)