@@ -1,3 +1,4 @@
+* Use statement date to compute the start balance
 * Add reporting with latest date and amount per journal
 
 Version 7.4.0 - 2024-11-04
